--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["numpy", "scipy", "pynwb", "ndx_franklab_novela"]
+dependencies = ["numpy", "scipy", "pynwb", "ndx_franklab_novela", "pyyaml"]
 dynamic = ["version"]
 
 [project.urls]
