--- a/.github/workflows/test_package_build.yml
+++ b/.github/workflows/test_package_build.yml
@@ -77,12 +77,8 @@ jobs:
         run: pip install archive/archive.tgz
       - name: Install test extras
         run: pip install spikegadgets_to_nwb[test]
-      - name: Print current directory
-        run: ls
-      - name: Navigate to source directory
-        run: cd ..
-      - name: Print source directory
-        run: ls
+      - name: Print directory tree
+        run: tree
       - name: Run tests
         run: pytest --doctest-modules -v --pyargs spikegadgets_to_nwb
   publish:
