Try no verbose flag

--- a/.github/workflows/test_package_build.yml
+++ b/.github/workflows/test_package_build.yml
@@ -84,8 +84,8 @@ jobs:
           WEBSITE: ftps://ftp.box.com/spikegadgets_to_nwb_test_data/
           DOWNLOAD_DIR: ${{ github.workspace }}/src/spikegadgets_to_nwb/tests/test_data
         run: |
-          wget --recursive -q --no-host-directories --user $UCSF_BOX_USER $WEBSITE --password $UCSF_BOX_TOKEN -P $DOWNLOAD_DIR
-          ls $DOWNLOAD_DIR
+          wget --recursive -nv --no-host-directories --user $UCSF_BOX_USER $WEBSITE --password $UCSF_BOX_TOKEN -P $DOWNLOAD_DIR
+          ls $DOWNLOAD_DIR/spikegadgets_to_nwb_test_data -lah
       - name: Run tests
         run: pytest --doctest-modules -v --pyargs spikegadgets_to_nwb
   publish:
