--- a/src/spikegadgets_to_nwb/tests/test_data/test_metadata.yml
+++ b/src/spikegadgets_to_nwb/tests/test_data/test_metadata.yml
@@ -115,9 +115,528 @@ electrode_groups:
     targeted_y: 2.2
     targeted_z: 3.3
     units: mm
+  - id: 1
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 2
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 3
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 4
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 5
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 6
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 7
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 8
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 9
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 10
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 11
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 12
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 13
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 14
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 15
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 16
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 17
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 18
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 19
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 20
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 22
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 23
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 24
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 25
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 26
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 27
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 28
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 29
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 30
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+  - id: 31
+    location: corpus callosum and associated subcortical white matter (cc-ec-cing-dwm)
+    device_type: tetrode_12.5
+    description: terode device description
+    targeted_location: Corticofugal pathways (cfp)
+    targeted_x: 1.1
+    targeted_y: 2.2
+    targeted_z: 3.3
+    units: mm
+
 ntrode_electrode_group_channel_map:
   - ntrode_id: 1
     electrode_group_id: 0
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 2
+    electrode_group_id: 1
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 3
+    electrode_group_id: 2
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 4
+    electrode_group_id: 3
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 5
+    electrode_group_id: 4
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 6
+    electrode_group_id: 5
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 7
+    electrode_group_id: 6
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 8
+    electrode_group_id: 7
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 9
+    electrode_group_id: 8
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 10
+    electrode_group_id: 9
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 11
+    electrode_group_id: 10
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 12
+    electrode_group_id: 11
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 13
+    electrode_group_id: 12
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 14
+    electrode_group_id: 13
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 15
+    electrode_group_id: 14
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 16
+    electrode_group_id: 15
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 17
+    electrode_group_id: 16
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 18
+    electrode_group_id: 17
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 19
+    electrode_group_id: 18
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 20
+    electrode_group_id: 19
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 21
+    electrode_group_id: 20
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 22
+    electrode_group_id: 21
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 23
+    electrode_group_id: 22
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 24
+    electrode_group_id: 23
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 25
+    electrode_group_id: 24
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 26
+    electrode_group_id: 25
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 27
+    electrode_group_id: 26
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 28
+    electrode_group_id: 27
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 29
+    electrode_group_id: 28
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 30
+    electrode_group_id: 29
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 31
+    electrode_group_id: 30
+    bad_channels: []
+    map:
+      "0": 0
+      "1": 1
+      "2": 2
+      "3": 3
+  - ntrode_id: 32
+    electrode_group_id: 31
     bad_channels: []
     map:
       "0": 0
