--- a/.github/workflows/test_package_build.yml
+++ b/.github/workflows/test_package_build.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Run tests
         env:
           DOWNLOAD_DIR: ${{ github.workspace }}/src/spikegadgets_to_nwb/tests/test_data
-        run: pytest --doctest-modules -v --pyargs spikegadgets_to_nwb
+        run: pytest --cov --doctest-modules -v --pyargs spikegadgets_to_nwb
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
