--- a/.github/workflows/test_package_build.yml
+++ b/.github/workflows/test_package_build.yml
@@ -89,11 +89,19 @@ jobs:
       - name: Run tests
         env:
           DOWNLOAD_DIR: ${{ github.workspace }}/src/spikegadgets_to_nwb/tests/test_data
-        run: pytest --cov --doctest-modules -v --pyargs spikegadgets_to_nwb
+        run: pytest --cov --cov-report=xml --doctest-modules -v --pyargs spikegadgets_to_nwb
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          env_vars: OS,PYTHON
+          fail_ci_if_error: true
+          files: .coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          verbose: true
   publish:
     runs-on: ubuntu-latest
     needs: [test-package]
