Revert "Temporarily remove ffmpeg dependency to circumvent testing error"
This reverts commit cce6cdcd49c946eacb0dc2af24f40a956149b992.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pyyaml",
     "neo",
     "dask[complete]",
+    "ffmpeg",
 ]
 dynamic = ["version"]
 
@@ -37,7 +38,6 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 test = ["black", "pytest", "pytest-cov"]
-convert_video = ["ffmpeg"]
 
 [tool.hatch.version]
 source = "vcs"
