--- a/.github/workflows/test_package_build.yml
+++ b/.github/workflows/test_package_build.yml
@@ -66,7 +66,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
-          python-version: 3
+          python-version: "3.11"
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Update pip
