Remove hdmf (redundant) and add pytest-mock

--- a/environment.yml
+++ b/environment.yml
@@ -7,17 +7,17 @@ dependencies:
 - scipy
 - pandas
 - pynwb
-- hdmf
 - nwbinspector
 - dask
 - ipython
 - black
 - pytest
 - pytest-cov
-- pip
+- pytest-mock
 - pyyaml
 - jsonschema
 - ffmpeg
+- pip
 - pip:
     - ndx-franklab-novela
     - neo
