--- a/src/trodes_to_nwb/tests/test_data/20230622_sample_metadataProbeReconfig.yml
+++ b/src/trodes_to_nwb/tests/test_data/20230622_sample_metadataProbeReconfig.yml
@@ -18,7 +18,7 @@ subject:
   weight: 100
 data_acq_device:
   - name: SpikeGadgets
-    system: Main Control Unit
+    system: SpikeGadgets
     amplifier: Intan
     adc_circuit: Intan
 cameras:
