--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "neo",
     "dask[complete]",
     "ffmpeg",
-    "jsonschema=4.19.2"
+    "jsonschema==4.19.2"
 ]
 dynamic = ["version"]
 
