--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "neo",
     "dask[complete]",
     "ffmpeg",
-    "jsonschema<4.21.0"
+    "jsonschema<4.21.0",
 ]
 dynamic = ["version"]
 
