Add ability to include dio comments from metadata yaml

--- a/src/trodes_to_nwb/tests/test_data/20230622_sample_metadata.yml
+++ b/src/trodes_to_nwb/tests/test_data/20230622_sample_metadata.yml
@@ -80,6 +80,7 @@ device:
 behavioral_events:
   - description: Din1
     name: Light_1
+    comments: Indicator for reward delivery
   - description: Din2
     name: Light_2
   - description: Dout2
