--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "nwbinspector>=0.5.0",
     "ndx_franklab_novela",
     "pyyaml",
-    "neo",
+    "neo>=0.13.4",
     "dask[complete]",
     "ffmpeg",
     "jsonschema<4.21.0",
