--- a/.github/workflows/test_package_build.yml
+++ b/.github/workflows/test_package_build.yml
@@ -94,7 +94,7 @@ jobs:
         if: matrix.package == 'editable'
         run: pip install -e .
       - name: Install test extras
-        run: pip install -e .[test]
+        run: pip install -e ..[test]
 
 
       # --- Cache Test Data Step ---
