--- a/src/trodes_to_nwb/tests/test_data/20230622_sample_metadata.yml
+++ b/src/trodes_to_nwb/tests/test_data/20230622_sample_metadata.yml
@@ -673,8 +673,10 @@ fs_gui_yamls:
     epochs:
       - 1
     power_in_mW: 77
+    dio_output_name: Light_1
   - name: fsgui_ripple_trigger.yaml
     epochs:
       - 2
     power_in_mW: 77
+    dio_output_name: Light_1
 
