--- a/src/trodes_to_nwb/tests/test_data/fsgui_ripple_trigger.yaml
+++ b/src/trodes_to_nwb/tests/test_data/fsgui_ripple_trigger.yaml
@@ -7,7 +7,7 @@ nodes:
   nickname: reward A
   source_id: e7988860-cd42-11ee-8f41-a0369f6f691e
   trackgeometry:
-    filename: /home/xulu/Xulu/Behavior/Geometry/hexmaze_zones_exclusive_reward_area.trackgeometry
+    filename: fsgui_geometry.trackgeometry
     zone_id: 54
   cameraWidth: 1292
   cameraHeight: 964
@@ -16,7 +16,7 @@ nodes:
   nickname: reward B
   source_id: e7988860-cd42-11ee-8f41-a0369f6f691e
   trackgeometry:
-    filename: /home/xulu/Xulu/Behavior/Geometry/hexmaze_zones_exclusive_reward_area.trackgeometry
+    filename: fsgui_geometry.trackgeometry
     zone_id: 52
   cameraWidth: 1292
   cameraHeight: 964
@@ -116,7 +116,7 @@ nodes:
   nickname: reward C
   source_id: e7988860-cd42-11ee-8f41-a0369f6f691e
   trackgeometry:
-    filename: /home/xulu/Xulu/Behavior/Geometry/hexmaze_zones_exclusive_reward_area.trackgeometry
+    filename: fsgui_geometry.trackgeometry
     zone_id: 53
   cameraWidth: 1292
   cameraHeight: 964
