add fsgui cameras to table

--- a/src/trodes_to_nwb/tests/test_data/20230622_sample_metadata.yml
+++ b/src/trodes_to_nwb/tests/test_data/20230622_sample_metadata.yml
@@ -674,9 +674,11 @@ fs_gui_yamls:
       - 1
     power_in_mW: 77
     dio_output_name: Light_1
+    camera_id: 0
   - name: fsgui_ripple_trigger.yaml
     epochs:
       - 2
     power_in_mW: 77
     dio_output_name: Light_1
+    camera_id: 0
 
