fix bad unix character

--- a/src/trodes_to_nwb/device_metadata/optical_fiber_metadata/optogenix_lambda_fiber.yml
+++ b/src/trodes_to_nwb/device_metadata/optical_fiber_metadata/optogenix_lambda_fiber.yml
@@ -6,5 +6,5 @@ manufacturer : Optogenix
 numerical_aperture : 0.39
 core_diameter_in_um : 200.0
 active_length_in_mm : 2.0
-ferrule_name : cFCF - ∅2.5mm Ceramic Ferrule
+ferrule_name : cFCF - 2.5mm Ceramic Ferrule
 ferrule_diameter_in_mm : 2.5
